# Atlas

./: .gitignore  ATLAS_1.4.0_UPDATES.md  BUILDING.md  CMakeLists.txt  INSTALL.md  README.md  RELEASING.md
installer/: Atlas.iss  Distribution.xml  accessible-layout-guide.html  build-pkg.sh
installer/pkg-scripts/: postinstall
src/common/: line_generator.cpp  line_generator.h  load_save.cpp  load_save.h  midi_manager.cpp  midi_manager.h  synth_base.cpp  synth_base.h  synth_constants.h  synth_gui_interface.cpp  synth_gui_interface.h  synth_parameters.cpp
src/interface/editor_components/: drag_drop_effect_order.cpp  drag_drop_effect_order.h  synth_preset_selector.cpp  synth_preset_selector.h  synth_slider.cpp
src/interface/editor_sections/: chorus_section.cpp  delay_section.cpp  effects_interface.cpp  effects_interface.h  extra_mod_section.cpp  filter_section.cpp  lfo_section.cpp  modulation_matrix.cpp  oscillator_section.cpp  preset_browser.cpp  synthesis_interface.cpp
src/interface/look_and_feel/: synth_strings.h
src/plugin/: synth_editor.cpp  synth_editor.h  synth_plugin.cpp  value_bridge.h
src/standalone/: main.cpp
src/synthesis/effects/: distortion.h
src/synthesis/effects_engine/: effects_modulation_handler.cpp  sound_engine.cpp
src/synthesis/framework/: poly_values.h  voice_handler.cpp  voice_handler.h
src/synthesis/modulators/: envelope.cpp  envelope.h  random_lfo.cpp  random_lfo.h  synth_lfo.cpp  synth_lfo.h
src/synthesis/modules/: chorus_module.cpp  chorus_module.h  compressor_module.cpp  compressor_module.h  delay_module.cpp  delay_module.h  dimension_expander_module.cpp  dimension_expander_module.h  distortion_module.cpp  distortion_module.h  envelope_module.cpp  envelope_module.h  equalizer_module.cpp  equalizer_module.h  filters_module.cpp  filters_module.h  flanger_module.cpp  flanger_module.h  formant_module.cpp  frequency_shifter_module.cpp  frequency_shifter_module.h  granular_module.cpp  lfo_module.cpp  limiter_module.cpp  limiter_module.h  modulation_connection_processor.cpp  modulation_connection_processor.h  oscillator_module.cpp  oscillator_module.h  phase_shift_module.cpp  phase_shift_module.h  phaser_module.cpp  phaser_module.h  producers_module.cpp  producers_module.h  random_lfo_module.cpp  reorderable_effect_chain.cpp  reorderable_effect_chain.h  reverb_module.cpp  reverb_module.h  (+6 more)
src/synthesis/producers/: granular_source.cpp  granular_source.h  sample_source.cpp  sample_source.h  synth_oscillator.cpp  synth_oscillator.h
src/synthesis/synth_engine/: sound_engine.cpp  sound_engine.h
src/unity_build/: common.cpp  synthesis.cpp
